# huly-ai-agent

./: .dockerignore  .editorconfig  .env  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml
.github/workflows/: cd.yml  ci.yml
.sqlx/: query-0226695489658eea07b8669af5bae23945e6a442993dddc943eb4a5f73f4c3a6.json  query-065b437eb9a6209664f6c99c22d57b0b4537fcf0c1d427a05c9cff9706735544.json  query-0c3355c8fc42f3d5740a82a7fd0af302ac46e6f7a554705de13ef9c8d60dbbfc.json  query-0ef8d5e02002d00440e07d3db60114ce24899e4fd857c86a08b4d94f1f3ee917.json  query-1105bc683e4fb8e03f0d35a2fdd62c38293def36d4347601fc923ea1c6c5da61.json  query-142532e456bbfedebbdccf861ba1bed8f54df71559bc52078f7fdfa2d44e1113.json  query-1689c9a603e10397af4934dd46e7db3bd66056d3ee67f7f0b37c726de87a3f2b.json  query-1ecc96d256a3ec04a7cdb093a5a8a15f86f22533068eb1329384799f40fb7bb1.json  query-203635cc969cbf6c1185a846498a1bf9bea5c8baf8b807e4aee8864ea5a13fe7.json  query-20b84b887a36fd34bdf9baea998279f5480bdb9ea682316089bdcaa35f18ab46.json  query-22eea2156c9de1f7122df5e20924a45fca8226e4d25f4f7e1ee967dc2219e861.json  query-232e5c763377ebdc554f0bca956ddbd685959007db5008ad95b5c236d3b75325.json  query-28baa4eaebb70e3780a2ed5b574341c6ec0c39b327d00d8b1fec6f4d5e01ecdd.json  query-336e5f7ec870deb62bd2727cd796aeb87033020b8ed9d8807b8567ec817d6e75.json  query-35535112011a04d085abfcb8b4213e997e4cb4219c35fefb75cef59671729d79.json  query-3b6f04c77c4a9d6d412ea3eb53f712a523e9a2c8a34b0d73a1fb4ae5d5244f91.json  query-3ea27f850353659da220f4d0ad6b71dcd30d4096e650b76a15cb8c6b15e59b6e.json  query-41d6e28215ee7ec446f30b0f626c0596498a0d9da3dc0c867de37874dda3a188.json  query-425b79b1d76e4444ca83d7994878138ec2edc516eeb1935b67cf94584700c853.json  query-43ce6513bccace4009ab209d64fe9e863845e854bd1c0a44f561556701672aa0.json  query-4d331c3a45047b4a579de3bf340135ad6e0fe6ff3fb73b7f8337f46d6bb9b29e.json  query-4e5bc747e03d7aa8aebe904317d0794b8d77ec0a4761796e8dfa976734aea2d3.json  query-50b0bc27f2d7332f88ee5e49b4e5025f2b31c32de7d9cf7d7973b7ce58c2d085.json  query-5332433d7e64012ef9aa1a68596408824bcf587eefed322f4eadcd178ca10897.json  query-5dd43a309ebcf2d2e515de9294e200e04b4760db069c30617b7e84d3c279dae7.json  query-61a8e489bff0e43809bca5582bf745b766bcbe7815245e02c4e1a7ab0ee64dd3.json  query-6415b5308cb626a14ce2ebaf6349b67b8a00c154d31ec3c2244294ccbab1234b.json  query-64ba4a5a609bffb5c3bdefaaadda1ba23e0679136fd01725761353a116a6391d.json  query-657221e5704dcfe23c92908f42ac3b68d42803a4bca825a0bd2acc8b19fc25c6.json  query-6a59de3c1a203c03fe5e5d592af4f19e2574a2f9215cae57514113a0af7dba8b.json  query-6b789becc54f8fd9f5b3970510ccfe2ec9736bb039078ff6e500299f1d52a446.json  query-718141c4df03ee2c39c4f5291365add9a1145ed995d72752e091cf66d89cdf83.json  query-7273d44a488d4633c1db3bb6f89cb89eb9a89baf1c1d0d1585bc0f8c69c5add0.json  query-73a374becb0fe10f91ace9b41b3a502845628f53bc005d6cc895f72c14912295.json  query-757f22f8b5e954abd31b8aa2585ab8666ab600546b56802798e44df2180acf65.json  query-7b45c0f1aee70e5d57263d5b2b6010c08c6a8c4f19d750ff084fc1c1991cb038.json  query-81e8a309fd962b5e94dad7b13bc596c9b0c4f867fb4cb663bfaed3b486a37b31.json  query-84ac92fcdf420218e5daf5d8654bb4ecd73885d9c0a58e37d27b6b87f58919f2.json  query-868f2da9529f2d764479a38f17d961c2ccf56464109d8a91798696e0e9a30950.json  query-9105f45b817a7211e4faa235222b187db0c8c2d8baff2e360084c80caa07b72d.json  (+20 more)
crates/agent/src/: state.rs
data/: config.yml
migrations/: 0001_state.sql  0002_memory.sql  0003_person_id.sql  0004_channel_title.sql  0005_message_id.sql  0006_new_memory.sql  0007_semantic_memory.sql  0008_task_complexity.sql  0009_assistant_state.sql  0010_scheduler.sql
scripts/: build-deploy-img.sh
src/: agent.rs  channel_log.rs  communication.rs  config.rs  config.yml  context.rs  database.rs  http.rs  main.rs  otel.rs  providers.rs  scheduler.rs  state.rs  task.rs  tools.rs  types.rs  utils.rs
src/agent/: assistant_chat_task.rs  assistant_task.rs  channel_task.rs  notes_mantainance_task.rs  sleep_task.rs  utils.rs
src/communication/: http.rs  streaming.rs  types.rs
src/huly/: blob.rs  mod.rs  streaming.rs  types.rs  typing.rs
src/huly/streaming/: types.rs
src/memory/: importance.rs  mod.rs  system_prompt.md  system_prompt_assistant.md  system_prompt_employee.md
src/providers/: openrouter.rs
src/templates/: context.md  context.txt  mod.rs  rgb_protocol.md  system_prompt.md  system_prompt.txt
src/templates/agent_modes/: employee.md  personal_assistant.md
src/templates/follow_chat/: context.md  system_prompt.md
src/templates/rgb_protocol/: blue.md  green.md  red.md
src/templates/tasks/assistant/: system_prompt.md
src/templates/tasks/assistant_chat/: system_prompt.md
src/templates/tasks/assistant_task/: context.md  system_prompt.md
src/templates/tasks/follow_chat/: context.md  system_prompt_assistant.md  system_prompt_employee.md
src/templates/tasks/notes_mantainance/: context.md  system_prompt.md
src/templates/tasks/sleep/: system_prompt.md
src/tools/: mcp.rs
src/tools/browser/: browser_client.rs  mod.rs  tools.json
src/tools/command/: mod.rs  process_registry.rs  system_prompt.txt  tools.json
src/tools/files/: mod.rs  system_prompt.txt  tools.json
src/tools/huly/: mod.rs  system_prompt.md  system_prompt.txt  tools.json
src/tools/memory/: mod.rs  system_prompt.txt  tools.json
src/tools/notes/: mod.rs  system_prompt.md  tools.json
src/tools/task/: mod.rs  system_prompt.md  tools.json
src/tools/web/: mod.rs  tools.json  web_search.rs
src/types/: streaming.rs
xtask/: Cargo.toml
xtask/src/: main.rs
