[package]
name = "huly-ai-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/hcengineering/huly-ai"
repository = "https://github.com/hcengineering/huly-ai"
authors = ["Konstantin Zaitsev <kos@hardcoreeng.com>"]
description = "AI Agent for Huly platform"
publish = false

[dependencies]
# system
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0"
config = "0.15.11"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = "0.3.18"
serde = "1.0"
serde_json = "1.0"
serde_yml = "0.0.12"
secrecy = { version = "0.10.3", features = ["serde"] }

# LLM providers
reqwest = { version = "0.12.20", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
async-stream = "0.3.6"
futures = "0.3.31"
async-trait = "0.1.88"
subst = "0.3.7"

# tools
diffy = "0.4.2"
ignore = "0.4"
grep-searcher = "0.1.14"
grep-regex = "0.1.13"
grep-printer = "0.2.2"

# huly
hulyrs = { git = "https://github.com/hcengineering/hulyrs.git", branch = "master", features = [
  "kafka",
] }
chrono = { version = "0.4.40", features = ["serde"] }
rdkafka = { version = "0.37.0", features = [
  "cmake-build",
  "ssl-vendored",
  "tracing",
] }
