[workspace]
resolver = "2"
members = ["xtask"]

[workspace.package]
edition = "2024"
license = "MIT"
homepage = "https://github.com/hcengineering/huly-ai"
repository = "https://github.com/hcengineering/huly-ai"

[package]
name = "huly-ai-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors = ["Konstantin Zaitsev <kos@hardcoreeng.com>"]
description = "AI Agent for Huly platform"
publish = false

[dependencies]
# system
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0"
config = "0.15.11"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = "0.3.18"
serde = "1.0"
serde_json = "1.0"
serde_yml = "0.0.12"
secrecy = { version = "0.10.3", features = ["serde"] }
dotenv = "0.15.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# LLM providers
reqwest = { version = "0.12.20", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
async-stream = "0.3.6"
futures = "0.3.31"
async-trait = "0.1.88"
subst = "0.3.7"

# tools
diffy = "0.4.2"
ignore = "0.4"
grep-searcher = "0.1.14"
grep-regex = "0.1.13"
grep-printer = "0.2.2"
sqlite-vec = "0.1.6"
libsqlite3-sys = "0.30.1"
zerocopy = "0.8.26"
paste = "1.0.15"

# mcp
mcp-core = { git = "https://github.com/kosz78/mcp-core.git", branch = "main", optional = true, features = [
  "sse",
] }

# huly
hulyrs = { git = "https://github.com/hcengineering/hulyrs.git", branch = "master", features = [
  "kafka",
] }
chrono = { version = "0.4.40", features = ["serde"] }
rdkafka = { version = "0.37.0", features = [
  "cmake-build",
  "ssl-vendored",
  "tracing",
] }


[features]
default = ["mcp"]
mcp = ["dep:mcp-core"]
