[workspace]
resolver = "2"
members = ["xtask"]

[workspace.package]
edition = "2024"
license = "MIT"
homepage = "https://github.com/hcengineering/huly-ai"
repository = "https://github.com/hcengineering/huly-ai"

[package]
name = "huly-ai-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors = [
  "Konstantin Zaitsev <kos@hardcoreeng.com>",
  "Nikolay Marchuk <nikolay.marchuk@hardcoreeng.com>",
]
description = "AI Agent for Huly platform"
publish = false

[dependencies]
# system
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0"
config = { version = "0.15.11", default-features = false, features = ["yaml"] }
clap = { version = "4.5", features = ["derive"] }
itertools = "0.14.0"
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = "0.3.18"
tracing-log = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_yml = "0.0.12"
secrecy = { version = "0.10.3", features = ["serde"] }
dotenv = "0.15.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
indexmap = "2.10.0"
bytes = "1.10"

# OpenTelemetry
opentelemetry = "0.30.0"
opentelemetry-stdout = { version = "0.30.0" }
opentelemetry_sdk = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["tokio"] }
tracing-opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.30.1"

# LLM providers
reqwest = { version = "0.12.20", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
  "multipart",
] }
async-stream = "0.3.6"
futures = "0.3.31"
async-trait = "0.1.88"
subst = "0.3.7"

# tools
## files
diffy = "0.4.2"
ignore = "0.4"
grep-searcher = "0.1.14"
grep-regex = "0.1.13"
grep-printer = "0.2.2"

## memory
sqlite-vec = "0.1.6"
libsqlite3-sys = "0.30.1"
zerocopy = "0.8.26"
paste = "1.0.15"

## command tools
process-wrap = { version = "8.2.1", features = ["tokio1"] }

## web search and fetch related
percent-encoding = "2.3.1"
htmd = "0.2.2"

## browser
tokio-tungstenite = "0.27.0"
base64 = "0.22.1"

## mcp
mcp-core = { git = "https://github.com/kosz78/mcp-core.git", branch = "main", optional = true, features = [
  "sse",
] }

## huly
hulyrs = { git = "https://github.com/hcengineering/hulyrs.git", branch = "master", features = [
  "kafka",
] }
chrono = { version = "0.4.40", features = ["serde"] }
rdkafka = { version = "0.38.0", features = [
  "cmake-build",
  "ssl-vendored",
  "tracing",
] }
mime_guess = "2.0.5"
uuid = { version = "1.16.0", features = ["v4"] }

[features]
default = ["mcp"]
mcp = ["dep:mcp-core"]
