[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
dotenv = "0.15.0"
clap = { version = "4.3.10", features = ["derive", "env", "wrap_help"] }
sqlx-cli = { version = "0.8", features = ["sqlite"] }
sqlite-vec = "0.1.6"
libsqlite3-sys = "0.30.1"
zerocopy = "0.8.26"
